# ipl

./: .gitignore  API_DESIGN.md  API_README.md  CHANGELOG.md  DEPLOY_RENDER.md  EXTENSIBILITY_EXAMPLE.md  IMPLEMENTATION_SUMMARY.md  PROJECT-UPDATE-LOGS.txt  README.md  SWAGGER_DOCUMENTATION.md  pyproject.toml  render.yaml  requirements.txt
frontend/: .env.example  README.md  app.json  babel.config.js  package-lock.json  package.json  tsconfig.json
frontend/app/: _layout.tsx  batter-profile.tsx  compare-matchups.tsx  detailed-insights.tsx  index.tsx  match-context.tsx
frontend/components/layout/: EmptyState.tsx  ErrorState.tsx  ScreenLayout.tsx  index.ts
frontend/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Select.tsx  Skeleton.tsx  StatCard.tsx  index.ts
frontend/constants/: colors.ts  typography.ts
frontend/src/core/config/: env.ts
frontend/src/core/design-system/: ThemeContext.tsx  index.ts  theme.ts
src/ipl_analytics/api/: __init__.py  config.py  dependencies.py  exceptions.py  main.py  run.py
src/ipl_analytics/db/: connection.py  insert_deliveries.py  insert_match.py  insert_players.py  pool.py
src/ipl_analytics/ingestion/: ingest-command.py  ingest_match.py  ingest_season.py  validate_match.py
src/ipl_analytics/misc/: batter_profile  batter_profile_season
src/ipl_analytics/models/: delivery.py
src/ipl_analytics/repositories/: __init__.py  base.py  batter_repository.py  match_repository.py  matchup_repository.py  player_repository.py
src/ipl_analytics/sql/: analytics.sql  schema.sql
todos/: PRD_Implementation_Gap_Analysis.md
(+57 files in other folders)
